syntax = "proto3";

package grpc;

option go_package = "github.com/MitoVeli/math_grpc_server/grpc";

service MathOperations {
    rpc Calculate(OperationRequest) returns (OperationResponse) {}
}

message OperationRequest {
    float x = 1;
    float y = 2;
    string operationSign = 3;
    float result = 4;
}

message OperationResponse {
    float result = 1;
}
